[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "statick-tooling"
authors = [{name = "NIWC Pacific"}]
description="Statick analysis plugins for Tooling files."
version = "0.1.1"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC0-1.0"}
classifiers = [
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "importlib_metadata",
    "statick",
    "types-docutils",
]

[tool.setuptools.package-data]
statick_tool = [
    "rsc/*",
    "rsc/.*",
]

[project.entry-points."statick_tool.plugins.discovery"]
dockerfile = "statick_tool.plugins.discovery.dockerfile:DockerfileDiscoveryPlugin"

[project.entry-points."statick_tool.plugins.tool"]
dockerfile-lint = "statick_tool.plugins.tool.dockerfile_lint:DockerfileULintToolPlugin"
dockerfilelint = "statick_tool.plugins.tool.dockerfilelint:DockerfileLintToolPlugin"
hadolint = "statick_tool.plugins.tool.hadolint:HadolintToolPlugin"

[project.urls]
"Homepage" = "https://github.com/sscpac/statick-tooling"
"Bug Tracker" = "https://github.com/sscpac/statick-tooling/issues"

[project.optional-dependencies]
test = [
    "coverage",
    "flake8-pep3101",
    "flake8<5",  # Pin until https://github.com/tholo/pytest-flake8/issues/87 is fixed.
    "mock",
    "mypy",
    "pycodestyle<2.9.0",  # Pin until https://github.com/tholo/pytest-flake8/issues/87 is fixed.
    "pydocstyle",
    "pytest",
    "pytest-cov",
    "setuptools",
    "statick",
    "statick-md",
    "tox",
    "tox-gh-actions",
]
docs = [
    "sphinx==1.7.9",
    "yaml-1.3",
]
dist = [
    "setuptools",
    "wheel",
]
